# projectgen

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  test-pypi.yml
generator/: __init__.py  cli.py  creator.py  python_creator.py  typescript_creator.py  validator.py  versions.py
generator/templates/: __init__.py  app_files.py  base.py  config_files.py  test_files.py
generator/templates/python/: app_files.py  config_files.py  test_files.py
generator/templates/typescript/: agent_files.py  config_files.py  core_files.py  database_files.py
