[project]
name = "projectgen"
version = "1.0.0"
description = "Generador CLI de proyectos de Python con arquitectura limpia (SOLID + GoF + GRASP)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["fastapi", "generator", "template", "cli", "architecture", "solid", "clean-code", "python", "project-generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
]
dependencies = [
    "rich>=13.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/projectgen"
Documentation = "https://github.com/yourusername/projectgen#readme"
Repository = "https://github.com/yourusername/projectgen"
Issues = "https://github.com/yourusername/projectgen/issues"
Changelog = "https://github.com/yourusername/projectgen/releases"

[project.scripts]
projectgen = "generator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator"]

# Configuración de Ruff (linter + formatter)
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (manejado por formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["generator"]

[[tool.uv.index]]
name = "projectgen"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true